# rom-weaver

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .mise.toml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  REFERENCES.md  THIRD_PARTY_LICENSES.md  TODO.md  docker-compose.yml  install.mjs  install.ps1  install.sh  lefthook.yml  package-lock.json  package.json  release-please-config.json  signatures.json
.cargo/: config.toml
.config/: hadolint.yaml  lefthook.yml  mise.toml
crates/rom-weaver-app/: Cargo.toml
crates/rom-weaver-app/src/: bundle_apply.rs  bundle_command.rs  bundle_create.rs  cheats_apply.rs  checksum_command.rs  checksum_variants.rs  command_args.rs  command_dispatch.rs  commands_and_selection.rs  compress_trim_batch.rs  compression.rs  compression_planning.rs  disc_grouping_command.rs  expect_tokens.rs  extract_batch.rs  extract_batch_plan.rs  extract_command.rs  extract_progress.rs  header_detection_and_finalize.rs  header_repair.rs  header_repair_n64.rs  ingest_command.rs  lib.rs  list_command.rs  manifest_apply.rs  manifest_command.rs  manifest_create.rs  manifest_download.rs  manifest_load.rs  manifest_parse.rs  manifest_schema.rs  nested_extract.rs  output_details.rs  patch_apply.rs  patch_apply_dcp.rs  patch_apply_disc.rs  patch_commands.rs  patch_create.rs  patch_filename_checksum.rs  patch_validate.rs  (+10 more)
crates/rom-weaver-cheats/: Cargo.toml
crates/rom-weaver-cheats/src/: action_replay.rs  game_genie.rs  layout.rs  lib.rs
crates/rom-weaver-cheats/tests/unit/: cheats.rs
crates/rom-weaver-checksum/: Cargo.toml  README.md
crates/rom-weaver-checksum/src/: core.rs  execution.rs  lib.rs  platform_detection.rs  rom_headers.rs  rom_identity.rs  variants.rs
crates/rom-weaver-checksum/tests/unit/: engine.rs
crates/rom-weaver-cli/: Cargo.toml  README.md  rom-weaver-bundle-v1.schema.json
crates/rom-weaver-cli/examples/: apply_dcp.rs  concurrent_extract.rs  dump_dcp.rs  dump_gdrom.rs  generate_manpages.rs  rebuild_disc.rs  roundtrip.rs
crates/rom-weaver-cli/src/: bundle_apply.rs  bundle_load.rs  bundle_parse.rs  bundle_schema.rs  checksum_command.rs  checksum_streaming.rs  checksum_variants.rs  cli.rs  command_args.rs  commands_and_selection.rs  compress_trim_batch.rs  compression_planning.rs  extract_batch.rs  extract_command.rs  header_detection_and_finalize.rs  header_repair_tests.rs  ingest_command.rs  lib.rs  main.rs  nested_extract.rs  patch_apply.rs  patch_apply_dcp.rs  patch_apply_disc.rs  patch_commands.rs  patch_validate.rs  reporters.rs  revert_footer.rs  source_resolution.rs  tests.rs  trim_execution.rs  wasm_main.rs  wasm_parse.rs
crates/rom-weaver-cli/src/cheats/: mod.rs
crates/rom-weaver-cli/src/dcp/: apply.rs  manifest.rs  mod.rs  rebuild.rs  zip.rs
crates/rom-weaver-cli/src/gdrom/: filesystem.rs  iso9660.rs  iso_writer.rs  mod.rs  mode1.rs  sector.rs
crates/rom-weaver-cli/src/lib_parts/: cli_app.rs
crates/rom-weaver-cli/src/render/: commands.rs  mod.rs  reporter.rs
crates/rom-weaver-cli/tests/: cli_smoke.rs  progress_percent_scale.rs  trace_logging.rs
crates/rom-weaver-cli/tests/cli_smoke/: bundle.rs  chd.rs  cheats.rs  checksum.rs  compress.rs  ingest.rs  inspect_extract.rs  manifest.rs  patch.rs  patch_disc.rs  probe_extract.rs  rvz_z3ds.rs  shared.rs  trim_batch.rs
crates/rom-weaver-cli/tests/unit/: cli.rs
crates/rom-weaver-codecs/: Cargo.toml
crates/rom-weaver-codecs/src/: backend.rs  lib.rs
crates/rom-weaver-codecs/tests/unit/: registry.rs
crates/rom-weaver-containers/: Cargo.toml  README.md  build.rs
crates/rom-weaver-containers/libarchive/: build.rs
crates/rom-weaver-containers/src/: archive_formats.rs  constants.rs  extract_support.rs  formats.rs  lib.rs  libarchive_support.rs
crates/rom-weaver-containers/src/chd/: handler_root.rs  handler_trait.rs  hunk_compression.rs
crates/rom-weaver-containers/src/handlers/: chd_native.rs  cso.rs  gcz.rs  nfs.rs  nod_shared.rs  pbp.rs  rar.rs  rvz.rs  sevenz.rs  stream.rs  tar.rs  tgc.rs  wbfs.rs  wia.rs  xiso.rs  z3ds.rs  zip.rs
crates/rom-weaver-containers/src/libarchive/: mod.rs  write.rs
crates/rom-weaver-containers/src/nod/disc/: preloader.rs  writer.rs
crates/rom-weaver-containers/src/nod/io/: ciso.rs  nkit.rs  wbfs.rs
crates/rom-weaver-containers/src/nod/util/: compress.rs  digest.rs  mod.rs
crates/rom-weaver-containers/src/xdvdfs/: mod.rs
crates/rom-weaver-containers/src/xdvdfs/write/: avl.rs
crates/rom-weaver-containers/tests/unit/: chd.rs  handlers.rs
crates/rom-weaver-core/: Cargo.toml  README.md
crates/rom-weaver-core/src/: common_files.rs  concurrency.rs  context.rs  disc_sheet.rs  env.rs  error.rs  io.rs  lib.rs  patch_support.rs  progress.rs  prompt.rs  registry.rs  report_details.rs  selection.rs  threads.rs
crates/rom-weaver-core/tests/: no_full_buffer_guard.rs
crates/rom-weaver-core/tests/unit/: error.rs  io.rs  registry.rs  threads.rs
crates/rom-weaver-dcp/: Cargo.toml
crates/rom-weaver-gdrom/: Cargo.toml
crates/rom-weaver-libarchive/: Cargo.toml
crates/rom-weaver-libarchive/src/: entries.rs  ffi.rs  lib.rs  read.rs  write.rs
crates/rom-weaver-patches/: Cargo.toml  README.md
crates/rom-weaver-patches/src/: aps_n64.rs  apsgba.rs  bdf.rs  bps.rs  bsp.rs  bsp_native_vm.rs  dldi.rs  dps.rs  gdiff.rs  hdiffpatch.rs  ips.rs  lib.rs  pat.rs  pds.rs  pmsr.rs  ppf.rs  rup.rs  solid.rs  spatch.rs  test_support.rs  ups.rs  vcdiff.rs  xdelta_ffi.rs
crates/rom-weaver-patches/src/shared/: labels.rs  threading.rs
crates/rom-weaver-patches/src/vcdiff/: core.rs
crates/rom-weaver-patches/tests/fixtures/hdiffpatch/: upstream-hdiff13-bz2.hdiff  upstream-hdiff13-lzma.hdiff  upstream-hdiff13-lzma2.hdiff  upstream-hdiff13-zlib.hdiff  upstream-hdiff13-zstd.hdiff  upstream-hdiffsf20-zstd.hpatchz
crates/rom-weaver-patches/tests/unit/: aps_n64.rs  apsgba.rs  bdf.rs  bps.rs  bsp.rs  dldi.rs  dps.rs  gdiff.rs  hdiffpatch.rs  ips.rs  lib.rs  pat.rs  pmsr.rs  ppf.rs  rup.rs  solid.rs  ups.rs
tools/rom-weaver-typegen/: Cargo.toml
tools/rom-weaver-typegen/src/: main.rs
(+180 files in other folders)
