[package]
name = "rom-weaver-app"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-containers = { path = "../rom-weaver-containers" }
rom-weaver-core = { path = "../rom-weaver-core" }
rom-weaver-libarchive.workspace = true
rom-weaver-patches = { path = "../rom-weaver-patches" }
serde_json.workspace = true
tracing.workspace = true
xdvdfs.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
