[package]
name = "rom-weaver-checksum"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
adler2 = "2.0.1"
crc16 = "0.4.0"
crc32fast = "1.5.0"
memmap2 = "0.9.5"
md-5 = "0.11.0"
rayon = { workspace = true }
rom-weaver-core = { path = "../rom-weaver-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.11.0"
