[package]
name = "rom-weaver-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rom-weaver-app = { path = "../rom-weaver-app" }
rom-weaver-core = { path = "../rom-weaver-core" }
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
flate2.workspace = true
nod.workspace = true
serde_json.workspace = true
xdvdfs.workspace = true

[[bin]]
name = "rom-weaver"
path = "src/main.rs"
