[package]
name = "rom-weaver-containers"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ciso.workspace = true
nod.workspace = true
rayon.workspace = true
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-chd = { path = "../rom-weaver-chd" }
rom-weaver-core = { path = "../rom-weaver-core" }
rom-weaver-libarchive = { workspace = true, default-features = false, features = ["write-archives"] }
serde_json.workspace = true
tracing.workspace = true
xdvdfs.workspace = true
zstd.workspace = true
zeekstd.workspace = true

[dev-dependencies]
chd.workspace = true
claxon.workspace = true
flate2.workspace = true
nod = { workspace = true, features = ["compress-lzma"] }
rom-weaver-chd = { path = "../rom-weaver-chd", features = ["test-utils"] }
tar.workspace = true
