[package]
name = "rom-weaver-core"
authors.workspace = true
description = "Foundation crate for rom-weaver: format registry traits, the shared RomWeaverError type, I/O and thread-planning helpers, and standalone codec helpers."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
typescript-types = ["dep:ts-rs"]

[dependencies]
bzip2.workspace = true
flate2.workspace = true
lzma-rust2.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }
zstd.workspace = true

# Used only to query physical RAM for memory-bounded parallelism on native hosts.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_fs.workspace = true

[lints]
workspace = true
