[package]
name = "rom-weaver-dcp"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crc32fast.workspace = true
miniz_oxide.workspace = true
rom-weaver-core = { path = "../rom-weaver-core" }
rom-weaver-gdrom = { path = "../rom-weaver-gdrom" }
rom-weaver-xdelta = { path = "../rom-weaver-xdelta" }
tracing.workspace = true
