[package]
name = "rom-weaver-gdrom"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rom-weaver-core = { path = "../rom-weaver-core" }
tracing.workspace = true
