[package]
name = "rom-weaver-libarchive"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
write-archives = ["rom-weaver-libarchive-sys/write-archives"]
write-extra = ["write-archives", "rom-weaver-libarchive-sys/write-extra"]

[dependencies]
akv = "0.1.0"
rom-weaver-core = { path = "../rom-weaver-core" }
rom-weaver-libarchive-sys = { workspace = true, default-features = false }
tracing = { workspace = true }
