[package]
name = "rom-weaver-patches"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["bsp-js"]
bsp-js = ["dep:boa_engine"]

[dependencies]
boa_engine = { workspace = true, optional = true }
crc32fast.workspace = true
md-5.workspace = true
memmap2.workspace = true
qbsdiff.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-core = { path = "../rom-weaver-core" }
rayon.workspace = true
serde_json.workspace = true
tracing.workspace = true

[build-dependencies]
cc.workspace = true
