[package]
name = "rom-weaver-patches"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bzip2.workspace = true
crc32fast.workspace = true
md-5.workspace = true
qbsdiff.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-core = { path = "../rom-weaver-core" }
rom-weaver-xdelta = { path = "../rom-weaver-xdelta" }
rayon.workspace = true
serde_json.workspace = true
sha1.workspace = true
suffix_array.workspace = true
tracing.workspace = true
